# visuals

./: .gitignore  .merlin  LICENSE  Makefile  Makefile.rules  README.md  animation.ml  animation.mli  cut-path.sh  dune-project  dune-workspace  header.gp  ideas.txt  jbuild  main.ml  notes.txt  polynomial.ml  polynomial.mli  start.sh
atoms/: .gitignore  Makefile  README  action.ml  action.mli  atom.ml  box.ml  box.mli  calibrate.mli  color.ml  color.mli  color_cycle.ml  color_cycle.mli  color_picker.ml  color_picker.mli  common.ml  dom_wrappers.ml  dom_wrappers.mli  dom_wrappers_raw.js  dune  faye.ml  faye.mli  geometry.ml  geometry.mli  global.ml  global.mli  gui_full.ml  gui_light.ml  index-client-full.html  index-client-light.html  index-js.html  index-master.html  index-ml.html  index-server.html  index.html  index.js  index.ml  index_client_full.js  index_client_full.ml  index_client_light.js  (+27 more)
bboysp/: index.html
calibrate/: .gitignore  Makefile  calibrate.ml  calibrate.mli  dune  index.html  index.js  index.ml  jbuild  prism.ml  prism.mli  std_internal.ml  three.ml  three.mli  three_wrappers.ml  three_wrappers.mli
camlimages/: camlimages.opam  dune-project
camlimages/config/: dune  xConfigurator.ml
camlimages/test/: dune
cert/: cert.pem  key.pem
common/: Makefile  dune  ewma.ml  ewma.mli  jbuild  local_min.ml  local_min.mli  moving_average.ml  moving_average.mli  moving_min.ml  window_min.ml  window_min.mli
grid/: .gitignore  Makefile  Makefile.rules  grid.ml  grid.mli  gui_client.ml  index-load.html  index-rain.html  index.ml  index_load.ml  jbuild  (+4 more)
(+321 files in other folders)
